# ubercookie

./: .gitignore  LICENSE  Makefile  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  ids.py  main.py  store.py
backend/tests/: conftest.py  test_api.py
deploy/ansible/: README.md  ansible.cfg
deploy/ansible/inventory/: hosts.yml
deploy/ansible/inventory/group_vars/all/: main.yml  vault.yml.example
deploy/ansible/playbooks/: site.yml
deploy/ansible/roles/app/handlers/: main.yml
deploy/ansible/roles/app/tasks/: main.yml
deploy/ansible/roles/app/templates/: ubercookie.env.j2  ubercookie.service.j2
deploy/ansible/roles/certbot/tasks/: main.yml
deploy/ansible/roles/certbot/templates/: certbot-renew.service.j2  certbot-renew.timer.j2  ubercookie-certbot-renew.j2
deploy/ansible/roles/common/tasks/: main.yml
deploy/ansible/roles/firewall/handlers/: main.yml
deploy/ansible/roles/firewall/tasks/: main.yml
deploy/ansible/roles/nginx/handlers/: main.yml
deploy/ansible/roles/nginx/tasks/: main.yml
docs/: techniques.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: robots.txt  sitemap.xml  sw.js
frontend/src/: main.js  style.css
frontend/src/ubercookie/: constants.js  index.js  persistence.js  registry.js
frontend/src/ubercookie/vectors/: cacheApi.js  cookie.js  etag.js  httpCache.js  indexedDB.js  lastModified.js  localStorage.js  opfs.js  serverCookie.js  serviceWorker.js  sessionStorage.js  windowName.js
frontend/src/ui/: dashboard.js  log.js
scripts/: dev.sh
(+9 files in other folders)
