[project]
name = "ubercookie-backend"
version = "0.1.0"
description = "Backend for ubercookie — an educational web-tracking / persistence demonstration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

# PEP 735 dependency group — installed automatically by `uv sync`.
[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
